--- a/paimon-filesystems/pom.xml
+++ b/paimon-filesystems/pom.xml
@@ -37,6 +37,8 @@
         <module>paimon-oss-impl</module>
         <module>paimon-s3</module>
         <module>paimon-s3-impl</module>
+        <module>paimon-cosn</module>
+        <module>paimon-cosn-impl</module>
     </modules>
 
     <properties>
