--- a/paimon-flink/paimon-flink-common/src/test/resources/log4j2-test.properties
+++ b/paimon-flink/paimon-flink-common/src/test/resources/log4j2-test.properties
@@ -26,3 +26,9 @@ appender.testlogger.type = CONSOLE
 appender.testlogger.target = SYSTEM_ERR
 appender.testlogger.layout.type = PatternLayout
 appender.testlogger.layout.pattern = %-4r [%tid %t] %-5p %c %x - %m%n
+
+# Set DEBUG level for a specific class
+logger.myclass.name =org.apache.paimon.flink.lookup.FileStoreLookupFunction
+logger.myclass.level = DEBUG
+logger.myclass.additivity = false
+logger.myclass.appenderRef.test.ref = TestLogger
