get table add uuid and fix format table

--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -671,6 +671,8 @@ components:
           format: int64
         schema:
           $ref: '#/components/schemas/Schema'
+        uuid:
+          type: string
     AlterTableRequest:
       type: object
       properties:
