--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -664,7 +664,9 @@ components:
     GetTableResponse:
       type: object
       properties:
-        path:
+        id:
+          type: string
+        name:
           type: string
         schemaId:
           type: integer
@@ -850,6 +852,8 @@ components:
     GetDatabaseResponse:
       type: object
       properties:
+        id:
+          type: string
         name:
           type: string
         options:
