--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -240,11 +240,7 @@ paths:
               $ref: '#/components/schemas/CreateTableRequest'
       responses:
         "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GetTableResponse'
+          description: Success, no content
         "500":
           description: Internal Server Error
   /v1/{prefix}/databases/{database}/tables/{table}:
@@ -312,11 +308,7 @@ paths:
               $ref: '#/components/schemas/AlterTableRequest'
       responses:
         "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GetTableResponse'
+          description: Success, no content
         "404":
           description: Resource not found
           content:
@@ -358,7 +350,7 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
-  /v1/{prefix}/databases/{database}/tables/{table}/rename:
+  /v1/{prefix}/databases/{database}/tables/rename:
     post:
       tags:
         - table
@@ -375,11 +367,6 @@ paths:
           required: true
           schema:
             type: string
-        - name: table
-          in: path
-          required: true
-          schema:
-            type: string
       requestBody:
         content:
           application/json:
@@ -387,11 +374,7 @@ paths:
               $ref: '#/components/schemas/RenameTableRequest'
       responses:
         "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GetTableResponse'
+          description: Success, no content
         "404":
           description: Resource not found
           content:
@@ -406,7 +389,7 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
-  /v1/{prefix}/databases/{database}/tables/{table}/commit:
+  /v1/{prefix}/databases/{database}/tables/commit:
     post:
       tags:
         - table
@@ -419,11 +402,6 @@ paths:
           schema:
             type: string
         - name: database
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: table
           in: path
           required: true
           schema:
@@ -642,6 +620,172 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
+  /v1/{prefix}/databases/{database}/views:
+    get:
+      tags:
+        - view
+      summary: List views
+      operationId: listViews
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: database
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListViewsResponse'
+        "500":
+          description: Internal Server Error
+    post:
+      tags:
+        - view
+      summary: Create view
+      operationId: createView
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: database
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateViewRequest'
+      responses:
+        "200":
+          description: Success, no content
+        "404":
+          description: Resource not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        "500":
+          description: Internal Server Error
+  /v1/{prefix}/databases/{database}/views/{view}:
+    get:
+      tags:
+        - view
+      summary: Get view
+      operationId: getView
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: database
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: view
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetViewResponse'
+        "404":
+          description: Resource not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        "500":
+          description: Internal Server Error
+    delete:
+      tags:
+        - view
+      summary: Drop view
+      operationId: dropView
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: database
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: view
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Success, no content
+        "404":
+          description: Resource not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        "500":
+          description: Internal Server Error
+  /v1/{prefix}/databases/{database}/views/rename:
+    post:
+      tags:
+        - view
+      summary: Rename view
+      operationId: renameView
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: database
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RenameTableRequest'
+      responses:
+        "200":
+          description: Success, no content
+        "404":
+          description: Resource not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        "409":
+          description: Resource has exist
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        "500":
+          description: Internal Server Error
 components:
   schemas:
     CreateDatabaseRequest:
@@ -709,6 +853,13 @@ components:
           $ref: '#/components/schemas/Identifier'
         schema:
           $ref: '#/components/schemas/Schema'
+    CreateViewRequest:
+      type: object
+      properties:
+        identifier:
+          $ref: '#/components/schemas/Identifier'
+        schema:
+          $ref: '#/components/schemas/ViewSchema'
     DataField:
       type: object
       properties:
@@ -767,7 +918,9 @@ components:
           pattern: ^ROW.*
           example: ROW
         fields:
-          $ref: '#/components/schemas/DataField'
+          type: array
+          items:
+           $ref: '#/components/schemas/DataField'
     Identifier:
       type: object
       properties:
@@ -946,7 +1099,9 @@ components:
     RenameTableRequest:
       type: object
       properties:
-        newIdentifier:
+        source:
+          $ref: '#/components/schemas/Identifier'
+        destination:
           $ref: '#/components/schemas/Identifier'
     CommitTableRequest:
       type: object
@@ -960,8 +1115,52 @@ components:
       properties:
         version:
           type: integer
+          format: int32
+          nullable: true
         id:
           type: integer
+          format: int64
+        schemaId:
+          type: integer
+          format: int64
+        baseManifestList:
+          type: string
+        deltaManifestList:
+          type: string
+        changelogManifestList:
+          type: string
+          nullable: true
+        indexManifest:
+          type: string
+        commitUser:
+          type: string
+        commitIdentifier:
+          type: string
+        commitKind:
+          type: string
+          enum: ["APPEND", "COMPACT", "OVERWRITE", "ANALYZE"]
+        timeMillis:
+          type: integer
+          format: int64
+        logOffsets:
+          type: object
+          additionalProperties:
+            type: integer
+            format: int64
+        totalRecordCount:
+          type: integer
+          format: int64
+        deltaRecordCount:
+          type: integer
+          format: int64
+        changelogRecordCount:
+          type: integer
+          format: int64
+        watermark:
+          type: integer
+          format: int64
+        statistics:
+          type: string
     CommitTableResponse:
       type: object
       properties:
@@ -1043,6 +1242,35 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Partition'
+    GetViewResponse:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        schema:
+          $ref: '#/components/schemas/ViewSchema'
+    ListViewsResponse:
+      type: object
+      properties:
+        views:
+          type: array
+          items:
+            type: string
+    ViewSchema:
+      type: object
+      properties:
+        rowType:
+          $ref: '#/components/schemas/RowType'
+        options:
+          type: object
+          additionalProperties:
+            type: string
+        comment:
+          type: string
+        query:
+          type: string
     Partition:
       type: object
       properties:
