--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -432,6 +432,43 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
+  /v1/{prefix}/databases/{database}/tables/{table}/credentials:
+    get:
+      tags:
+        - table
+      summary: List credentials
+      operationId: listCredentials
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: database
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: table
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetTableCredentialsResponse'
+        "404":
+          description: Resource not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        "500":
+          description: Internal Server Error
   /v1/{prefix}/databases/{database}/tables/{table}/partitions:
     get:
       tags:
@@ -1166,6 +1203,16 @@ components:
       properties:
         success:
           type: boolean
+    GetTableCredentialsResponse:
+      type: object
+      properties:
+        expiresAt:
+          type: integer
+          format: int64
+        credentials:
+          type: object
+          additionalProperties:
+            type: string
     AlterDatabaseRequest:
       type: object
       properties:
