--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@ under the License.
         <janino.version>3.0.11</janino.version>
         <mockito.version>3.4.6</mockito.version>
         <okhttp.version>4.12.0</okhttp.version>
+        <okio.version>3.6.0</okio.version>
         <jaxb.api.version>2.3.1</jaxb.api.version>
         <findbugs.version>1.3.9</findbugs.version>
         <json-smart.version>2.4.9</json-smart.version>
@@ -277,6 +278,17 @@ under the License.
                 <groupId>net.minidev</groupId>
                 <artifactId>json-smart</artifactId>
                 <version>${json-smart.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.squareup.okio</groupId>
+                <artifactId>okio</artifactId>
+                <version>${okio.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
