[test] [parquet] Add test for parquet new reader

--- a/paimon-format/pom.xml
+++ b/paimon-format/pom.xml
@@ -292,6 +292,14 @@ under the License.
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.parquet</groupId>
+            <artifactId>parquet-column</artifactId>
+            <version>${parquet.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
