--- a/paimon-core/pom.xml
+++ b/paimon-core/pom.xml
@@ -246,6 +246,11 @@ under the License.
             <version>42.7.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.8</version>
+        </dependency>
 
     </dependencies>
 
