[rest] Add isExternal to GetTableResponse

--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -995,6 +995,8 @@ components:
           type: string
         name:
           type: string
+        isExternal:
+          type: boolean
         schemaId:
           type: integer
           format: int64
